                  to x_pos, y_pos
- Window:         For the "add_window" command, changed resizable keyword to no_resize
- Window:         For the "add_window" command, changed title_bar keyword to no_title_bar
- Window:         For the "add_window" command, changed movable keyword to no_move
- Images:         Removed secondary data source from images

New Commands:

- Widgets:        Added "add_time_picker" command
- Widgets:        Added "add_date_picker" command
- Widgets:        Added "get_item_type" command
- Widgets:        Added "configure_item" command
- Widgets:        Added "get_item_configuration" command
- Widgets:        Added "add_pie_series" command
- Plots:          Added "add_shade_series" command
- Plots:          Added "add_bar_series" command
- Plots:          Added "add_error_series" command
- Plots:          Added "add_heat_series" command
- Radio Button:   Added "horizontal" keyword to radio button #215
- Radio Button:   Added "update_bounds" keyword to add_*_series commands

-----------------------------------------------------------------------
 VERSION 0.3.7 (9/14/2020)
-----------------------------------------------------------------------

Decorated log: https://github.com/hoffstadt/DearPyGui/releases/tag/v0.3.7

Updates:
- ImPlot: upgraded to commit 4f0a09f

New Commands:
- Widgets: Added "add_image_button" command
- Plots:   Added "add_pie_chart" command
- Plots:   Added "add_pie_chart_data" command
- Plots:   Added "clear_pie_chart_data" command
- Plots:   Added "add_stem_series" command

Fixes:
- Threadpool: Fixed issue with threads freezing


-----------------------------------------------------------------------
 VERSION 0.3.5 (9/10/2020)
-----------------------------------------------------------------------

Decorated log: https://github.com/hoffstadt/DearPyGui/releases/tag/v0.3.5

New Commands:
- Menu Item: added "check" and "shortcut" keywords #186
- Widgets:   added "is_item_container" #203